[gd_scene load_steps=4 format=3 uid="uid://b3y8it0ex10w1"]

[ext_resource type="Script" uid="uid://df0kom2u4w1y8" path="res://scenes/pagina_08_contracapa.gd" id="1_a7eu6"]
[ext_resource type="Texture2D" uid="uid://bs16axmh2l5ya" path="res://assets/imagens/8.png" id="2_a7eu6"]
[ext_resource type="Texture2D" uid="uid://d2bt2wnsw2u40" path="res://assets/imagens/icone_som_ligado.png" id="3_ms03p"]

[node name="Pagina08Contracapa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7eu6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a7eu6")

[node name="BotaoVoltarPagina" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 18.0
offset_top = 914.0
offset_right = 69.0
offset_bottom = 966.0
text = "
"

[node name="BotaoVoltarInicio" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 362.0
offset_top = 909.0
offset_right = 417.0
offset_bottom = 972.0

[node name="BotaoSom" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 684.0
offset_top = 21.0
offset_right = 742.0
offset_bottom = 76.0
icon = ExtResource("3_ms03p")
flat = true

[connection signal="pressed" from="TextureRect/BotaoVoltarPagina" to="." method="_on_botao_voltar_pagina_pressed"]
[connection signal="pressed" from="TextureRect/BotaoVoltarPagina" to="." method="_on_botao_retroceder_pressed"]
[connection signal="pressed" from="TextureRect/BotaoVoltarInicio" to="." method="_on_inicio_pressed"]
[connection signal="pressed" from="TextureRect/BotaoVoltarInicio" to="." method="_on_botao_voltar_inicio_pressed"]
[connection signal="pressed" from="TextureRect/BotaoSom" to="." method="_on_botao_som_pressed"]
